force-app/main/default/objects/SS_Survey__c/SS_Survey__c.object-meta.xml
<CustomObject>
    <label>Survey</label>
    <nameField>
        <label>Survey  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>