force-app/main/default/objects/SS_Survey__c/fields/SS_Archived__c.field-meta.xml
<CustomField>
    <fullName>SS_Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>