force-app/main/default/objects/SS_Survey__c/fields/SS_Is_Active_Survey__c.field-meta.xml
<CustomField>
    <fullName>SS_Is_Active_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active Survey</label>
    <type>Checkbox</type>
</CustomField>