force-app/main/default/objects/SS_Survey__c/fields/SS_Selected_Survey__c.field-meta.xml
<CustomField>
    <fullName>SS_Selected_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selected Survey</label>
    <type>Checkbox</type>
</CustomField>