force-app/main/default/objects/SS_Survey__c/fields/SS_Survey_Id__c.field-meta.xml
<CustomField>
    <fullName>SS_Survey_Id__c</fullName>
    <externalId>true</externalId>
    <label>Survey Id</label>
    <length>221</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>