force-app/main/default/objects/SS_Survey__c/fields/SS_Survey_Type__c.field-meta.xml
<CustomField>
    <fullName>SS_Survey_Type__c</fullName>
    <label>Survey Type</label>
    <length>221</length>
    <type>Text</type>
</CustomField>