force-app/main/default/objects/SS_Survey__c/fields/SS_Webhook_Id__c.field-meta.xml
<CustomField>
    <fullName>SS_Webhook_Id__c</fullName>
    <label>Webhook Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>