force-app/main/default/objects/SS_Survey__c/fields/SS_WebHook_URL__c.field-meta.xml
<CustomField>
    <fullName>SS_WebHook_URL__c</fullName>
    <label>WebHook URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>